Use generated API client for graph resolver
